# ideal-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  llms.txt  pyproject.toml
examples/: demo_ideal_universal_connector.ipynb
src/ideal_ai/: __init__.py  config.json  connector.py
