[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ideal-ai"
version = "0.1.1"
description = "One Connector to Rule Them All. The ultimate universal Python interface for LLMs, Vision, Audio & Image Gen (Ollama, OpenAI, Google, Anthropic, Mistral, Alibaba & more)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Gilles Blanchet", email = "gblanchet@idealcom.ch" },
]
keywords = [
    "llm",
    "ai",
    "python",
    "llm-connector",
    "unified-llm",
    "unified-api",
    "universal-connector",
    "wrapper",
    "openai",
    "ollama",
    "google",
    "anthropic",
    "mistral",
    "alibaba",
    "infomaniak",
    "huggingface",
    "vision",
    "audio",
    "multimodal",
    "smolagents",
    "agent"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "requests>=2.32.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "smolagents>=0.1.0",
    "google-generativeai>=0.3.0",
    "tabulate>=0.9.0"
]

[project.urls]
Homepage = "https://github.com/Devgoodcode/ideal-ai"
Repository = "https://github.com/Devgoodcode/ideal-ai"
Documentation = "https://github.com/Devgoodcode/ideal-ai#readme"
Issues = "https://github.com/Devgoodcode/ideal-ai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Hatchling configuration to include config.json in the package
[tool.hatch.build.targets.wheel]
packages = ["src/ideal_ai"]

[tool.hatch.build.targets.wheel.force-include]
"src/ideal_ai/config.json" = "ideal_ai/config.json"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/README.md",
    "/LICENSE",
]